--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,22 @@
   --foreground: #171717;
 }
 
+@layer utilities {
+.scrollbar-hover {--scrollbar-thumb: transparent;
+scrollbar-width: thin;
+scrollbar-color: var(--scrollbar-thumb) transparent;
+}
+.scrollbar-hover::-webkit-scrollbar {
+width: 8px;
+}
+.scrollbar-hover::-webkit-scrollbar-thumb {
+background-color: var(--scrollbar-thumb);
+border-radius: 20px;
+}
+.scrollbar-hover:hover {--scrollbar-thumb: #cbd5e1; /* This is slate-300 */
+}
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -25,18 +41,20 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-::-webkit-scrollbar {
-    width: 0.6rem;
-    border-radius: 0.5rem;
-    background-color: hsl(228, 12%, 25%);
-}
-::-webkit-scrollbar-thumb {
-    background-color: hsl(228, 8%, 35%);
-    border-radius: 0.5rem;
-}
-::-webkit-scrollbar-thumb:hover {
-    background-color: hsl(228, 8%, 45%);
-}
+
+
+h1 {@apply text-3xl sm:text-4xl font-bold tracking-wide leading-9 sm:leading-11 text-wrap capitalize p-0};
+h2 {@apply text-xl sm:text-3xl font-bold tracking-wide p-0};
+h3 {@apply text-xl sm:text-2xl font-bold tracking-wider p-0};
+
+
+
+.body-text{@apply text-sm text-black/80 font-medium text-wrap tracking-wider }
+.body-text_sm{@apply text-xs text-black/60 font-semibold text-wrap tracking-wide }
+
+.btn-cta {@apply sm:inline-flex items-center w-max py-2 px-5 bg-black/80 text-sm text-white font-semibold tracking-wider rounded-full };
+.btn-cta_secondary {@apply  items-center gap-2 w-max py-2 px-5 bg-transparent text-sm text-black font-semibold tracking-wider border rounded-full capitalize };
+.btn-cta_mobile {@apply inline-flex sm:hidden items-center justify-normal w-max py-2 px-5 bg-black/80 text-sm text-white font-semibold tracking-wider rounded-full };
 
 
 img {
@@ -71,13 +89,6 @@ img {
     z-index: -1;
 }
 
-
-.primary_heading {
-  @apply text-3xl sm:text-5xl leading-8 sm:leading-14;
-}
-.secondary_heading {
-  @apply text-xl sm:text-2xl font-normal  py-4 tracking-widest;
-}
 
 .post {
   @apply grid grid-cols-[repeat(auto-fit,minmax(250px,1fr))];
